fix: Prevent horizontal shift when scrollbar shows/hides

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,3 +7,11 @@
 body {
     @apply text-gray-200 bg-gray-1000;
 }
+
+/** 
+ * https://css-tricks.com/elegant-fix-jumping-scrollbar-issue/
+ * Fix horizontal jump when scroll bar shows up
+ */
+html {
+    margin-left: calc(100vw - 100%);
+}
